# src/controllers/book.controller.ts
@@ -1,4 +1,4 @@
-import { Controller, Get, Route, Tags } from "tsoa";
+import {Controller,Body,Patch, Get, Post, Route, Tags} from "tsoa";
 import { BookDTO } from "../dto/book.dto";
 import { bookService } from "../services/book.service";
 import { CustomError } from "../middlewares/errorHandler";
@@ -14,7 +14,7 @@ export class BookController extends Controller {
     }
 
     @Get("{id}")
-    public async getBoodById(id: number): Promise<BookDTO> {
+    public async getBookById(id: number): Promise<BookDTO> {
         let book: Book | null = await bookService.getBookById(id);
 
         if(book === null) {
@@ -24,5 +24,18 @@ export class BookController extends Controller {
         }
 
         return toDto(book);
+    }
+
+    @Post("/")
+    public async createBook(@Body() requestBody: BookDTO): Promise<BookDTO> {
+        let {title, publishYear, author, isbn} = requestBody;
+
+        if(author?.id === undefined) {
+            let error : CustomError = new Error("Author ID is required to create a book");
+            error.status = 400;
+            throw error;
+        }
+
+        return bookService.createBook(title, publishYear, author?.id, isbn)
     }
 }
